Added ldap provider login
